syntax = "proto3";

package v1;

option go_package = "api/v1";

message SupermetalPasswordRequest {
}

message SupermetalPasswordResponse {
    bool featureDisabled = 1;
    string supermetalPassword = 2;
}

service SupermetalPassword {
    rpc FetchSupermetalPassword (SupermetalPasswordRequest) returns (SupermetalPasswordResponse);
}
